--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 			<section id="banner">
 				<div class="inner split">
 					<section>
-						<h2>Welcome to Prism, a free responsive site template by <a href="http://templated.co">TEMPLATED</a></h2>
+						<h2>빅데이터 사이언스 실무자 양성과정</h2>
 					</section>
 					<section>
-						<p>Lorem ipsum nisl sed cursus magna et amet veroeros. Phasellus aliquam et tempus lorem dolor feugiat adipiscing lorem.</p>
+						<p>5개월간 이루어진 실무형 빅데이터 사이언스 인재 양성 과정</p>
 						<ul class="actions">
 							<li><a href="#" class="button special">Get started</a></li>
 						</ul>
@@ -34,19 +34,17 @@
 			<section id="one" class="wrapper">
 				<div class="inner split">
 					<section>
-						<h2>Magna feugiat adipiscing</h2>
-						<p>Lorem ipsum nisl sed cursus magna et amet veroeros. Sed phasellus aliquam et tempus lorem feugiat adipiscing lorem. Morbi pharetra vitae felis placerat pharetra. Nulla risus orci, dapibus id malesuada et nec, malesuada quis orci. Pellentesque eget consequat.</p>
+						<h2>R과 파이썬을 활용한 빅데이터분석 실무자 양성과정</h2>
+						<p>실무형 양성과정으로 이루어진 빅데이터 과정은 Python, SQL, DB, 통계, 머신러닝, 딥러닝, Hadoop/NoSQL전반의 실무를 위한 기본 역량의 확보를 목표로 이루어진 과정</p>
 						<ul class="actions">
-							<li><a href="#" class="button alt">Learn more</a></li>
+							<li><a href="#" class="button alt">상세 내용</a></li>
 						</ul>
 					</section>
 					<section>
 						<ul class="checklist">
-							<li>Ipsum nisl sed cursus magna</li>
-							<li>Amet veroeros sed aliquam consequat</li>
-							<li>Tempus lorem adipiscing et lorem</li>
-							<li>Morbi pharetra vitae felis placerat</li>
-							<li>Pharetra nulla risus orci dapibus</li>
+							<li>빅데이터 기본 프로그래밍</li>
+							<li>통계기반 데이터 분석</li>
+							<li>머신러닝/딥러닝 기반 데이터 분석</li>	
 						</ul>
 					</section>
 				</div>
