--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 							<img src="images/pic01.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h3>Ipsum pharetra tempus</h3>
-							<p>Lorem ipsum nisl sed cursus magna et amet veroeros. Sed phasellus malesuada quis orci. Pellentesque eget consequat.</p>
+							<h3>빅데이터 시각화</h3>
+							<p>matplotlib, seaborn, poltly, folium 등의 라이브러리를 이용한 빅데이터 시각화</p>
 							<ul class="actions">
-								<li><a href="#" class="button alt">Details</a></li>
+								<li><a href="./datavis/index.html" class="button alt">Details</a></li>
 							</ul>
 						</div>
 					</div>
